--- a/Exercicio 1.4
+++ b/Exercicio 1.4
@@ -1,1 +1,21 @@
+#include <stdio.h>
+
+int main() {
+    float deposito;
+
+    printf("Depósito mínimo para abrir uma conta: R$ 500,00\n");
+
+    do {
+        printf("Insira o valor do depósito inicial: R$ ");
+        scanf("%f", &deposito);
+
+        if (deposito < 500.0) {
+            printf("Erro: O valor mínimo de depósito é R$ 500,00. Tente novamente.\n");
+        }
+    } while (deposito < 500.0);
+
+    printf("Depósito de R$ %.2f aceito. Conta aberta com sucesso!\n", deposito);
+
+    return 0;
+}
 
